[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/components/house_placement/house_placement_overlay.gd" id="1_house"]

[node name="HousePlacementOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_house")

[node name="HintPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="HintLabel" type="Label" parent="HintPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "点击地图选择放置位置"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -60.0
offset_right = 160.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
theme_override_constants/separation = 15

[node name="GardenCheck" type="CheckBox" parent="BottomBar"]
layout_mode = 2
text = "添加花园"

[node name="CancelButton" type="Button" parent="BottomBar"]
custom_minimum_size = Vector2(80, 36)
layout_mode = 2
text = "取消"

[node name="ConfirmButton" type="Button" parent="BottomBar"]
custom_minimum_size = Vector2(100, 36)
layout_mode = 2
text = "确认放置"
